syntax = "proto3";

package OpenSeaService;

import "sell-order.proto";
import "cancel-order.proto";



service OpenSeaService {
  rpc SellOrder (SellOrder.SellNft) returns (SellOrder.Status) {}
  rpc CancelOrder (CancelOrder.CancelOrder) returns (CancelOrder.CancelStatus) {}
}